# MoonTransfer

./: .gitignore  .python-version  MoonTransfer.spec  README.it.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
scripts/: build.ps1  build.sh
src/moontransfer/: app.py  croc.py  desktop.py  files.py  messages.py  progress.py  protocol.py  runner.py  widgets.py
tests/: test_app.py  test_check_latest_croc.py  test_croc.py  test_desktop.py  test_fetch_croc.py  test_files.py  test_messages.py  test_progress.py  test_protocol.py  test_runner.py
tools/: build.py  check_latest_croc.py  fetch_croc.py
