[project]
name = "moontransfer"
version = "0.1.0"
description = "Cross-platform GUI for secure file transfers via croc"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
]

[project.scripts]
moontransfer = "moontransfer.app:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
